--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-select": "^5.10.0"
   },
   "devDependencies": {
